# IoTParkingSystem

./: CMakeLists.txt  arduino.cpp  arduino.h  car.cpp  car.h  widget.cpp  widget.h  widget.ui
